Revert "Fix display on narrow screens"
This reverts commit b5689c18743326615d73ee870279f06ca312f5a1.

--- a/less/admin-ui/admin/application.less
+++ b/less/admin-ui/admin/application.less
@@ -18,7 +18,6 @@ body {
   padding: 10px;
   margin: 15px;
   background: #ffffff;
-  width: fit-content;
 }
 footer {
   margin-top: -70px;
@@ -226,7 +225,6 @@ footer p {
 /* --- Begin Application::List --- */
 .list-column {
   vertical-align: middle !important;
-  white-space: nowrap;
 }
 /* ---- Begin Application::List::Selectboxes ---- */
 .list-selectable {
@@ -249,7 +247,6 @@ footer p {
   position: relative;
   text-align: right;
   height: 100%;
-  display: flex;
 }
 .list-row-action-wrapper-link {
   color: #7f8ca3;
@@ -257,7 +254,6 @@ footer p {
   padding: 4px;
   display: inline-block;
   visibility: hidden;
-  transition: 0s;
 
   &.medium {
     font-size: 1.2em;
